# numpyro-sts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
notebook/: mauna-loa-co2.ipynb
notebooks/: mauna-loa-co2.ipynb
numpyro_sts/: __init__.py  ar.py  base.py  discrete_markov.py  fgn.py  llt.py  random_walk.py  smooth_llt.py  util.py
numpyro_sts/periodic/: __init__.py  cyclical.py  standard.py  time.py  trigonometric.py
numpyro_sts/seasonal/: __init__.py  standard.py  trigonometric.py
tests/: test_markov.py  test_sts.py  test_union.py
