[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numpyro_sts"
description = "Extends numpyro with some utility distributions for structural time series modelling"
dynamic = ["version"]
authors = [
    {name = "Victor Gruselius", email="victor.gruselius@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

keywords = ["stochastic", "timeseries"]

classifiers = [
        "Programming Language :: Python",
        "Development Status :: 3 - Alpha",
        "Natural Language :: English",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpyro",
    "numpy",
    "funsor",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "black",
    "isort",
    "ruff",
    "coverage",
    "bumpver",
]

[project.urls]
homepage = "https://github.com/tingiskhan/numpyro-sts"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
exclude = ["__init__.py"]

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["numpyro_sts*"]

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

"numpyro_sts/__init__.py" = [
    '__version__ = "{version}"'
]

[tool.setuptools.dynamic]
version = {attr = "numpyro_sts.__version__"}

[tool.pytest.ini_options]
pythonpath = ["."]